--- a/superset-chart/Chart.yaml
+++ b/superset-chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: superset
-description: Apache Superset with external MySQL metadata
+description: Apache Superset
 type: application
 version: 0.1.0
 appVersion: "3.0"
