--- a/superset-chart/templates/postgres.yaml
+++ b/superset-chart/templates/postgres.yaml
@@ -43,7 +43,7 @@ spec:
     - metadata:
         name: postgres-pv
       spec:
-        accessModes: ["ReadWriteOnce"]
+        accessModes: ["ReadWriteMany"]
         resources:
           requests:
             storage: 10Gi
